--- a/_objects.grid.scss
+++ b/_objects.grid.scss
@@ -13,6 +13,7 @@
 
 $iota-grid                : true;
 $iota-grid--aligned       : false !default;
+$iota-grid--rev           : false !default;
 $iota-grid-gutter-default : 20px !default;
 $iota-grid-gutter-extra   : () !default;
 
@@ -69,6 +70,25 @@ $iota-grid-gutter-extra   : () !default;
     }
   }
 
+}
+
+
+
+
+// Grid Object Reversed
+
+@if ( $iota-grid--rev == true ) {
+  
+  .#{$iota-object-namespace}grid--rev {
+    direction: rtl;
+    text-align: left;
+    
+    & > .#{$iota-object-namespace}grid__col {
+      direction: ltr;
+      text-align: left;
+    }
+  }
+  
 }
 
 
